language/move-lang/tests/move_check/parser/function_native_with_body.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/function_native_with_body.move:3:21
  │
3 │     native fun fn() {}
  │                     ^
  │                     │
  │                     Unexpected '{'
  │                     Expected ';'

