language/move-lang/tests/move_check/parser/function_native_with_body.move
module M {
    // Native functions should not specify a function body.
    native fun fn() {}
}
